--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,11 +39,15 @@ header {
 }
 
 .sub-header a {
-    margin-right: 40px;
+    margin-right: 10px;
+    padding: 0 20px;
+    width: fit-content;
     color: var(--secondary-color);
     font-weight: 500;
     font-size: 18px;
+    border-bottom: 2px solid transparent;
 }
+
 .sub-header a:last-child {
     margin-right: 0;
 }
@@ -55,7 +59,19 @@ header {
 .sub-header a:hover {
     text-decoration: none;
     color: #000;
+    border-bottom: 2px solid var(--primary-color);
 }
+
+/* .sub-header a.active:after, .sub-header a:hover:after {
+    background: var(--primary-color);
+    width: 100%;
+    height: 2px;
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    border-radius: 2px 2px 0 0;
+} */
 
 input {
     min-width: 300px;
@@ -66,6 +82,7 @@ input {
 input:focus {
     outline: none;
 }
+
 input::placeholder {
     color: var(--light-gray-color);
 }
